@@ -21,22 +21,21 @@ import com.winterhavenmc.spawnstar.PluginMain;
 import com.winterhavenmc.spawnstar.messages.Macro;
 import com.winterhavenmc.spawnstar.messages.MessageId;
 import com.winterhavenmc.spawnstar.sounds.SoundId;
-
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 
-final class GiveSubcommand extends AbstractSubcommand {
-
+final class GiveSubcommand extends AbstractSubcommand
+{
 	private final PluginMain plugin;
 
 
-	GiveSubcommand(final PluginMain plugin) {
+	GiveSubcommand(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.name = "give";
 		this.usage = "/spawnstar give <player> [quantity]";
@@ -49,38 +48,31 @@ final class GiveSubcommand extends AbstractSubcommand {
 
 	@Override
 	public List<String> onTabComplete(final CommandSender sender, final Command command,
-	                                        final String alias, final String[] args) {
-
-		// initialize return list
-		List<String> returnList = new ArrayList<>();
-
-		// return list of matching players
-		if (args.length == 2) {
-			return plugin.getServer().matchPlayer(args[1]).stream()
-					.map(Player::getName).collect(Collectors.toList());
-		}
-
-		// return some useful quantities
-		else if (args.length == 3) {
-			returnList = Arrays.asList("1", "2", "3", "5", "10");
-		}
-
-		return returnList;
+	                                  final String alias, final String[] args)
+	{
+		return switch (args.length)
+		{
+			case 2 -> null; // return null for list of matching online players
+			case 3 -> List.of("1", "2", "3", "5", "10"); // return some useful quantities
+			default -> List.of(); // return empty list
+		};
 	}
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to give SpawnStars, output error message and return
-		if (!sender.hasPermission("spawnstar.give")) {
+		if (!sender.hasPermission("spawnstar.give"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_PERMISSION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// check min arguments
-		if (args.size() < getMinArgs()) {
+		if (args.size() < getMinArgs())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_UNDER).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			displayUsage(sender);
@@ -88,7 +80,8 @@ final class GiveSubcommand extends AbstractSubcommand {
 		}
 
 		// check max arguments
-		if (args.size() > getMaxArgs()) {
+		if (args.size() > getMaxArgs())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			displayUsage(sender);
@@ -96,13 +89,14 @@ final class GiveSubcommand extends AbstractSubcommand {
 		}
 
 		// get passed player name
-		String targetPlayerName = args.get(0);
+		String targetPlayerName = args.getFirst();
 
 		// try to match target player name to currently online player
 		Player targetPlayer = plugin.getServer().getPlayer(targetPlayerName);
 
 		// if no match, send player not found message and return
-		if (targetPlayer == null) {
+		if (targetPlayer == null)
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_PLAYER_NOT_FOUND).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -112,10 +106,13 @@ final class GiveSubcommand extends AbstractSubcommand {
 		int quantity = 1;
 
 		// if second argument, try to parse as integer
-		if (args.size() == 2) {
-			try {
+		if (args.size() == 2)
+		{
+			try
+			{
 				quantity = Integer.parseInt(args.get(1));
-			} catch (NumberFormatException e) {
+			} catch (NumberFormatException e)
+			{
 				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_QUANTITY_INVALID).send();
 				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 				return true;
@@ -125,51 +122,54 @@ final class GiveSubcommand extends AbstractSubcommand {
 		// validate quantity (min = 1, max = configured maximum, or runtime Integer.MAX_VALUE)
 		quantity = Math.max(1, quantity);
 		int maxQuantity = plugin.getConfig().getInt("max-give-amount");
-		if (maxQuantity < 0) {
+		if (maxQuantity < 0)
+		{
 			maxQuantity = Integer.MAX_VALUE;
 		}
 		quantity = Math.min(maxQuantity, quantity);
 
-		// add specified quantity of spawnstar(s) to player inventory
-		HashMap<Integer, ItemStack> noFit = targetPlayer.getInventory().addItem(plugin.spawnStarUtility.create(quantity));
+		ItemStack item = plugin.spawnStarUtility.create(quantity);
+
+		HashMap<Integer, ItemStack> noFit = targetPlayer.getInventory().addItem(item);
 
 		// count items that didn't fit in inventory
 		int noFitCount = 0;
-		for (int index : noFit.keySet()) {
+		for (int index : noFit.keySet())
+		{
 			noFitCount += noFit.get(index).getAmount();
 		}
 
 		// if remaining items equals quantity given, send player-inventory-full message and return
-		if (noFitCount == quantity) {
-			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_INVENTORY_FULL)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
-					.setMacro(Macro.TARGET_PLAYER, targetPlayerName)
-					.send();
+		if (noFitCount == quantity)
+		{
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_INVENTORY_FULL)
+					.setMacro(Macro.TARGET_PLAYER, targetPlayerName)
+					.setMacro(Macro.ITEM, item)
+					.send();
 			return true;
 		}
 
-		// subtract noFitCount from quantity
-		quantity -= noFitCount;
-
 		// send message when giving to self
-		if (sender.getName().equals(targetPlayer.getName())) {
+		if (sender.getName().equals(targetPlayer.getName()))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE_SELF)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
+					.setMacro(Macro.ITEM, item)
 					.send();
 		}
-		else {
+		else
+		{
 			// send message and play sound to giver
-			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE_SENDER)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
-					.setMacro(Macro.TARGET_PLAYER, targetPlayerName)
-					.send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_SUCCESS_GIVE_SENDER);
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE_SENDER)
+					.setMacro(Macro.TARGET_PLAYER, targetPlayerName)
+					.setMacro(Macro.ITEM, item)
+					.send();
 
 			// send message to target player
 			plugin.messageBuilder.compose(targetPlayer, MessageId.COMMAND_SUCCESS_GIVE_TARGET)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
 					.setMacro(Macro.TARGET_PLAYER, sender)
+					.setMacro(Macro.ITEM, item)
 					.send();
 		}
 
