@@ -20,11 +20,13 @@ package com.winterhavenmc.spawnstar.commands;
 import com.winterhavenmc.spawnstar.PluginMain;
 import com.winterhavenmc.spawnstar.messages.MessageId;
 import com.winterhavenmc.spawnstar.sounds.SoundId;
-
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 
@@ -32,8 +34,8 @@ import java.util.stream.Collectors;
  * Help command implementation<br>
  * displays help and usage messages for plugin commands
  */
-final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
-
+final class HelpSubcommand extends AbstractSubcommand implements Subcommand
+{
 	private final PluginMain plugin;
 	private final SubcommandRegistry subcommandRegistry;
 
@@ -43,7 +45,8 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param plugin reference to plugin main class instance
 	 */
-	HelpSubcommand(final PluginMain plugin, SubcommandRegistry subcommandRegistry) {
+	HelpSubcommand(final PluginMain plugin, SubcommandRegistry subcommandRegistry)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.subcommandRegistry = subcommandRegistry;
 		this.name = "help";
@@ -56,10 +59,11 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 
 	@Override
 	public List<String> onTabComplete(final CommandSender sender, final Command command,
-	                                  final String alias, final String[] args) {
-
-		if (args.length == 2 && args[0].equalsIgnoreCase(this.name)) {
-			return subcommandRegistry.getKeys().stream()
+	                                  final String alias, final String[] args)
+	{
+		if (args.length == 2 && args[0].equalsIgnoreCase(this.name))
+		{
+			return subcommandRegistry.getNames().stream()
 					.map(subcommandRegistry::getSubcommand)
 					.filter(Optional::isPresent)
 					.filter(subcommand -> sender.hasPermission(subcommand.get().getPermissionNode()))
@@ -73,17 +77,19 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to display help, output error message and return true
-		if (!sender.hasPermission(permissionNode)) {
+		if (!sender.hasPermission(permissionNode))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_HELP_PERMISSION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// check max arguments
-		if (args.size() > getMaxArgs()) {
+		if (args.size() > getMaxArgs())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			displayUsage(sender);
@@ -91,13 +97,14 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 		}
 
 		// if no arguments, display usage for all commands
-		if (args.size() == 0) {
+		if (args.isEmpty())
+		{
 			displayUsageAll(sender);
 			return true;
 		}
 
 		// display subcommand help message or invalid command message
-		subcommandRegistry.getSubcommand(args.get(0)).ifPresentOrElse(
+		subcommandRegistry.getSubcommand(args.getFirst()).ifPresentOrElse(
 				subcommand -> sendCommandHelpMessage(sender, subcommand),
 				() -> sendCommandInvalidMessage(sender)
 		);
@@ -110,15 +117,18 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 * Send help description for subcommand to command sender with subcommand permission node,
 	 * otherwise send invalid command message
 	 *
-	 * @param sender the command sender
+	 * @param sender     the command sender
 	 * @param subcommand the subcommand to display help description
 	 */
-	private void sendCommandHelpMessage(CommandSender sender, Subcommand subcommand) {
-		if (sender.hasPermission(subcommand.getPermissionNode())) {
+	private void sendCommandHelpMessage(CommandSender sender, Subcommand subcommand)
+	{
+		if (sender.hasPermission(subcommand.getPermissionNode()))
+		{
 			plugin.messageBuilder.compose(sender, subcommand.getDescription()).send();
 			subcommand.displayUsage(sender);
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_INVALID).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		}
@@ -130,7 +140,8 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param sender the command sender
 	 */
-	private void sendCommandInvalidMessage(CommandSender sender) {
+	private void sendCommandInvalidMessage(CommandSender sender)
+	{
 		plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_INVALID).send();
 		plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		displayUsageAll(sender);
@@ -142,11 +153,11 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param sender the command sender
 	 */
-	void displayUsageAll(final CommandSender sender) {
-
+	void displayUsageAll(final CommandSender sender)
+	{
 		plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_USAGE_HEADER).send();
 
-		subcommandRegistry.getKeys().stream()
+		subcommandRegistry.getNames().stream()
 				.map(subcommandRegistry::getSubcommand)
 				.filter(Optional::isPresent)
 				.filter(subcommand -> sender.hasPermission(subcommand.get().getPermissionNode()))
